build_log.txt
[  0%] Building CXX object CMakeFiles/PedalForge.dir/source/ui/LibraryComponent.cpp.o
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:145:25: error: use of undeclared identifier 'getCategoryID'
  145 |     currentCategoryID = getCategoryID (currentCategoryDisplay);
      |                         ^
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:184:25: error: use of undeclared identifier 'categories'; did you mean 'category'?
  184 |     for (int i = 0; i < categories.size(); ++i)
      |                         ^~~~~~~~~~
      |                         category
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:182:60: note: 'category' declared here
  182 | void LibraryComponent::selectCategory (const juce::String& category)
      |                                                            ^
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:184:36: error: no member named 'size' in 'juce::String'
  184 |     for (int i = 0; i < categories.size(); ++i)
      |                         ~~~~~~~~~~ ^
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:186:28: error: use of undeclared identifier 'categories'; did you mean 'category'?
  186 |         if (getCategoryID (categories[i]) == category)
      |                            ^~~~~~~~~~
      |                            category
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:182:60: note: 'category' declared here
  182 | void LibraryComponent::selectCategory (const juce::String& category)
      |                                                            ^
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:186:13: error: use of undeclared identifier 'getCategoryID'
  186 |         if (getCategoryID (categories[i]) == category)
      |             ^
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:188:13: error: use of undeclared identifier 'categoryList'; did you mean 'category'?
  188 |             categoryList.selectRow (i);
      |             ^~~~~~~~~~~~
      |             category
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:182:60: note: 'category' declared here
  182 | void LibraryComponent::selectCategory (const juce::String& category)
      |                                                            ^
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:188:26: error: no member named 'selectRow' in 'juce::String'
  188 |             categoryList.selectRow (i);
      |             ~~~~~~~~~~~~ ^
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:252:28: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  252 |         g.drawText (assets[i].category == "NAM" ? juce::String (juce::CharPointer_UTF8 ("\xe2\x9a\xa1")) :
      |                     ~~~~~~ ^
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:253:28: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  253 |                     assets[i].category.startsWith("IR") ? juce::String (juce::CharPointer_UTF8 ("\xf0\x9f\x94\x8a")) : juce::String(),
      |                     ~~~~~~ ^
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:260:28: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  260 |         g.drawText (assets[i].name, textArea.removeFromTop (28).reduced (0, 4),
      |                     ~~~~~~ ^
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:264:39: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  264 |         float sizeKB = (float) assets[i].sizeBytes / 1024.0f;
      |                                ~~~~~~ ^
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:308:67: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  308 |                     filesToDelete.push_back(parent.filteredAssets[si].file);
      |                                             ~~~~~~                ^~
/Users/joshua/Developer/PedalForge/source/ui/LibraryComponent.cpp:307:35: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
  307 |                 if (si >= 0 && si < parent.filteredAssets.size())
      |                                ~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6 warnings and 7 errors generated.
make[2]: *** [CMakeFiles/PedalForge.dir/source/ui/LibraryComponent.cpp.o] Error 1
make[1]: *** [CMakeFiles/PedalForge.dir/all] Error 2
make: *** [all] Error 2
